--- a/src/notebooks/example.ipynb
+++ b/src/notebooks/example.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fetch_recent_papers(categories=[\"cs.AI\"], days=1, max_results=100):\n",
+    "def fetch_recent_papers(categories: list[str]=[\"cs.AI\"], days: int=1, max_results=100):\n",
     "    \"\"\"\n",
     "    Fetches papers from specific categories within a time window.\n",
     "    \"\"\"\n",
@@ -149,25 +149,38 @@
     "import ollama\n",
     "import json\n",
     "\n",
-    "def get_authors(author_list):\n",
+    "def get_authors(author_list: list[str]):\n",
     "    \"\"\"\n",
     "    Formats the author list for LLM input, truncating if too long.\n",
     "    \"\"\"\n",
-    "    # Assuming 'authors' is your list of strings\n",
     "    num_authors = len(author_list)\n",
     "\n",
     "    if num_authors <= 12:\n",
-    "        # If list is small, just give them all\n",
     "        author_string = \", \".join(author_list)\n",
     "    else:\n",
-    "        # Grab first 10 and last 2 (senior/corresponding positions)\n",
     "        first_part = author_list[:10]\n",
     "        last_part = author_list[-2:]\n",
     "        author_string = f\"{', '.join(first_part)} ... {', '.join(last_part)}\"\n",
     "    \n",
     "    return author_string\n",
     "\n",
-    "def fine_rank_with_llm(top_papers_df, user_interest=\"RAG\"):\n",
+    "def parse_llm_output(response_text: str):\n",
+    "    \"\"\"\n",
+    "    Sometimes LLM does not give list of JSON, so return {\"paper\": [...]} instead.\n",
+    "    Then parse it accordingly.\n",
+    "    \"\"\"\n",
+    "    data = json.loads(response_text)\n",
+    "    \n",
+    "    if isinstance(data, list):\n",
+    "        return data\n",
+    "    \n",
+    "    if isinstance(data, dict):\n",
+    "        for key in ['papers', 'results', 'recommendations']:\n",
+    "            if key in data:\n",
+    "                return data[key]\n",
+    "    return []\n",
+    "\n",
+    "def fine_rank_with_llm(top_papers_df: pd.DataFrame, user_interest:str=\"RAG\"):\n",
     "    \"\"\"\n",
     "    Uses a local LLM to give a qualitative 'Quality Score' to the top candidates.\n",
     "    \"\"\"\n",
@@ -175,8 +188,8 @@
     "    top_papers_df['cleaned_authors'] = top_papers_df['authors'].apply(get_authors)\n",
     "    all_papers_json = top_papers_df[['id', 'title', 'cleaned_authors', 'abstract']].to_dict(orient='records')\n",
     "\n",
-    "    print(len(all_papers_json))    \n",
-    "    print(all_papers_json)\n",
+    "    logger.info(f\"Number of papers to process: {len(all_papers_json)}\")\n",
+    "    logger.info(f\"Sample input paper JSON: {all_papers_json[0]}\")\n",
     "\n",
     "    llm_ranking_prompt = f\"\"\"\n",
     "    ## Task\n",
@@ -198,20 +211,32 @@
     "\n",
     "    ## Output\n",
     "\n",
-    "    Provide a JSON response with:\n",
+    "    In the \"papers\" field, provide a list of JSON response with top-5 papers, with the following fields:\n",
     "    - \"id\": The ArXiv ID of the paper.\n",
     "    - \"reasoning\": A one-sentence explanation of why this paper is worth reading or not.\n",
+    "\n",
+    "    The output format should look like this:\n",
+    "    {{\n",
+    "        \"papers\": \n",
+    "        [\n",
+    "            {{\"id\": \"paper_id_1\", \"reasoning\": \"Reasoning for paper 1...\"}},\n",
+    "            {{\"id\": \"paper_id_2\", \"reasoning\": \"Reasoning for paper 2...\"}},\n",
+    "            ...\n",
+    "            {{\"id\": \"paper_id_5\", \"reasoning\": \"Reasoning for paper 5...\"}}\n",
+    "        ]\n",
+    "    }}\n",
     "    \"\"\"\n",
     "    \n",
     "    response = ollama.generate(\n",
-    "        model='llama3:8b', \n",
+    "        model=\"llama3:8b\", \n",
     "        prompt=llm_ranking_prompt,\n",
-    "        format='json', # Ensures we get a parsable dict back\n",
-    "        options={'temperature': 0} # Keep it deterministic\n",
+    "        format=\"json\",\n",
+    "        options={\"temperature\": 0}\n",
     "    )\n",
     "    \n",
-    "    llm_output = json.loads(response['response'])\n",
-    "\n",
+    "    llm_output = parse_llm_output(response[\"response\"])\n",
+    "    logger.info(f\"LLM Output: {llm_output}\")\n",
+    "    \n",
     "    refined_results = []\n",
     "    for paper_analysis in llm_output:\n",
     "        paper_id = paper_analysis['id']\n",
@@ -219,11 +244,11 @@
     "        \n",
     "        refined_results.append({\n",
     "            \"id\": paper_id,\n",
-    "            \"url\": matching_paper['url'],\n",
-    "            \"title\": matching_paper['title'],\n",
-    "            \"authors\": matching_paper['cleaned_authors'],\n",
-    "            \"abstract\": matching_paper['abstract'],\n",
-    "            \"reasoning\": paper_analysis.get('why', '')\n",
+    "            \"url\": matching_paper[\"url\"],\n",
+    "            \"title\": matching_paper[\"title\"],\n",
+    "            \"authors\": matching_paper[\"cleaned_authors\"],\n",
+    "            \"abstract\": matching_paper[\"abstract\"],\n",
+    "            \"reasoning\": paper_analysis[\"reasoning\"]\n",
     "        })\n",
     "\n",
     "    return pd.DataFrame(refined_results)"
@@ -236,7 +261,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "top_df"
+    "refined_df = fine_rank_with_llm(top_df)"
    ]
   },
   {
@@ -246,33 +271,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "refined_df = fine_rank_with_llm(top_df)"
+    "refined_df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "11",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "refined_df.sort_values(by=['relevance_score', 'novelty_score', 'soundness_score'], ascending=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "12",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ollama.generate?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
