clean up fetcher

--- a/src/notebooks/example.ipynb
+++ b/src/notebooks/example.ipynb
@@ -7,14 +7,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import arxiv\n",
-    "import logging\n",
     "import pandas as pd\n",
-    "import datetime\n",
+    "import logging\n",
     "\n",
-    "# do logging\n",
     "logging.basicConfig(level=logging.INFO)\n",
-    "logger = logging.getLogger(__name__)\n"
+    "logger = logging.getLogger(__name__)"
    ]
   },
   {
@@ -24,49 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fetch_recent_papers(categories: list[str]=[\"cs.AI\"], days: int=1, max_results=100):\n",
-    "    \"\"\"\n",
-    "    Fetches papers from specific categories within a time window.\n",
-    "    \"\"\"\n",
-    "    # 1. Build Query (e.g., \"cat:cs.LG OR cat:cs.AI\")\n",
-    "    query = \" OR \".join([f\"cat:{c}\" for c in categories])\n",
-    "    \n",
-    "    client = arxiv.Client(\n",
-    "        page_size=100,\n",
-    "        delay_seconds=3.0, # Be nice to ArXiv servers\n",
-    "        num_retries=3\n",
-    "    )\n",
-    "    \n",
-    "    search = arxiv.Search(\n",
-    "        query=query,\n",
-    "        max_results=max_results,\n",
-    "        sort_by=arxiv.SortCriterion.SubmittedDate\n",
-    "    )\n",
-    "    \n",
-    "    # 2. Time Window\n",
-    "    threshold = datetime.datetime.now(datetime.timezone.utc) - datetime.timedelta(days=days)\n",
-    "    \n",
-    "    results = []\n",
-    "    for result in client.results(search):\n",
-    "        # ArXiv results are sorted by date, so we can break early\n",
-    "        if result.published < threshold:\n",
-    "            break\n",
-    "            \n",
-    "        results.append({\n",
-    "            \"id\": result.entry_id.split('/')[-1],\n",
-    "            \"title\": result.title,\n",
-    "            \"authors\": [a.name for a in result.authors],\n",
-    "            \"abstract\": result.summary.replace(\"\\n\", \" \"),\n",
-    "            \"published\": result.published,\n",
-    "            \"primary_category\": result.primary_category,\n",
-    "            \"url\": result.pdf_url,\n",
-    "        })\n",
-    "        \n",
-    "    since_time = threshold.strftime('%Y-%m-%d %H:%M')\n",
-    "    print(\n",
-    "        f\"Fetched {len(results)} new papers since {since_time}\"\n",
-    "    )\n",
-    "    return pd.DataFrame(results)"
+    "from arxiv_recommender.arxiv_retriever import fetch_recent_papers"
    ]
   },
   {
