refactor notebook to scripts

--- a/src/notebooks/example.ipynb
+++ b/src/notebooks/example.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from arxiv_recommender.arxiv_retriever import fetch_recent_papers"
+    "from arxivrec.fetcher import fetch_recent_papers"
    ]
   },
   {
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = fetch_recent_papers(max_results=1000)\n",
+    "df = fetch_recent_papers(max_results=100)\n",
     "df['combined_text'] = \"Title: \" + df['title'] + \" Abstract: \" + df['abstract']"
    ]
   },
@@ -42,7 +42,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df"
+    "from arxivrec.encoder import TextEncoder\n",
+    "\n",
+    "encoder = TextEncoder(model_name='sentence-transformers/all-MiniLM-L6-v2')"
    ]
   },
   {
@@ -52,10 +54,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sentence_transformers import SentenceTransformer\n",
     "import numpy as np\n",
     "\n",
-    "model = SentenceTransformer('sentence-transformers/all-MiniLM-L6-v2')"
+    "my_interest_embedding = encoder.encode([\"I am interested in Retrieval-augmented generation (RAG).\"])\n",
+    "content_embedding = encoder.encode(df['combined_text'].tolist())\n",
+    "print(my_interest_embedding.shape)\n",
+    "print(content_embedding.shape)\n",
+    "print(encoder.cosine_sim(my_interest_embedding, content_embedding))\n",
+    "\n",
+    "top_k_indices = encoder.get_top_k_similar(my_interest_embedding, content_embedding, k=10)\n",
+    "print(top_k_indices)"
    ]
   },
   {
@@ -65,13 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_interest_embedding = model.encode(\"I am interested in Retrieval-augmented generation (RAG).\")\n",
-    "content_embedding = model.encode(df['combined_text'].tolist())\n",
-    "\n",
-    "print(np.shape(content_embedding))\n",
-    "\n",
-    "cosine_sim = np.dot(content_embedding, my_interest_embedding) / (np.linalg.norm(content_embedding, axis=1) * np.linalg.norm(my_interest_embedding))\n",
-    "top_k_indices = np.argsort(-cosine_sim)[:10]"
+    "top_df = df.iloc[top_k_indices]"
    ]
   },
   {
@@ -81,7 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "top_df = df.iloc[top_k_indices]"
+    "from arxivrec.llm import fine_rank_with_llm"
    ]
   },
   {
@@ -91,112 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ollama\n",
-    "import json\n",
-    "\n",
-    "def get_authors(author_list: list[str]):\n",
-    "    \"\"\"\n",
-    "    Formats the author list for LLM input, truncating if too long.\n",
-    "    \"\"\"\n",
-    "    num_authors = len(author_list)\n",
-    "\n",
-    "    if num_authors <= 12:\n",
-    "        author_string = \", \".join(author_list)\n",
-    "    else:\n",
-    "        first_part = author_list[:10]\n",
-    "        last_part = author_list[-2:]\n",
-    "        author_string = f\"{', '.join(first_part)} ... {', '.join(last_part)}\"\n",
-    "    \n",
-    "    return author_string\n",
-    "\n",
-    "def parse_llm_output(response_text: str):\n",
-    "    \"\"\"\n",
-    "    Sometimes LLM does not give list of JSON, so return {\"paper\": [...]} instead.\n",
-    "    Then parse it accordingly.\n",
-    "    \"\"\"\n",
-    "    data = json.loads(response_text)\n",
-    "    \n",
-    "    if isinstance(data, list):\n",
-    "        return data\n",
-    "    \n",
-    "    if isinstance(data, dict):\n",
-    "        for key in ['papers', 'results', 'recommendations']:\n",
-    "            if key in data:\n",
-    "                return data[key]\n",
-    "    return []\n",
-    "\n",
-    "def fine_rank_with_llm(top_papers_df: pd.DataFrame, user_interest:str=\"RAG\"):\n",
-    "    \"\"\"\n",
-    "    Uses a local LLM to give a qualitative 'Quality Score' to the top candidates.\n",
-    "    \"\"\"\n",
-    "    top_papers_df = top_papers_df.copy()\n",
-    "    top_papers_df['cleaned_authors'] = top_papers_df['authors'].apply(get_authors)\n",
-    "    all_papers_json = top_papers_df[['id', 'title', 'cleaned_authors', 'abstract']].to_dict(orient='records')\n",
-    "\n",
-    "    logger.info(f\"Number of papers to process: {len(all_papers_json)}\")\n",
-    "    logger.info(f\"Sample input paper JSON: {all_papers_json[0]}\")\n",
-    "\n",
-    "    llm_ranking_prompt = f\"\"\"\n",
-    "    ## Task\n",
-    "\n",
-    "    You are an expert AI and Physics PhD Researcher. \n",
-    "    Given a list of papers with their titles, authors, and abstracts, you should help me decide which research papers to read based on my specific interest.\n",
-    "    These papers are posted on arXiv today.\n",
-    "    Your output should be top-5 results, stored in JSON format.\n",
-    "\n",
-    "    To select best papers, you should consider relevancy to my interest, novelty, and soundness of methodology. Use the author list to gauge credibility if needed.\n",
-    "    \n",
-    "\n",
-    "    ## My Interest\n",
-    "    My research interest topics: \"{user_interest}\"\n",
-    "\n",
-    "    \n",
-    "    ## Input paper as JSON array\n",
-    "    {all_papers_json}\n",
-    "\n",
-    "    ## Output\n",
-    "\n",
-    "    In the \"papers\" field, provide a list of JSON response with top-5 papers, with the following fields:\n",
-    "    - \"id\": The ArXiv ID of the paper.\n",
-    "    - \"reasoning\": A one-sentence explanation of why this paper is worth reading or not.\n",
-    "\n",
-    "    The output format should look like this:\n",
-    "    {{\n",
-    "        \"papers\": \n",
-    "        [\n",
-    "            {{\"id\": \"paper_id_1\", \"reasoning\": \"Reasoning for paper 1...\"}},\n",
-    "            {{\"id\": \"paper_id_2\", \"reasoning\": \"Reasoning for paper 2...\"}},\n",
-    "            ...\n",
-    "            {{\"id\": \"paper_id_5\", \"reasoning\": \"Reasoning for paper 5...\"}}\n",
-    "        ]\n",
-    "    }}\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    response = ollama.generate(\n",
-    "        model=\"llama3:8b\", \n",
-    "        prompt=llm_ranking_prompt,\n",
-    "        format=\"json\",\n",
-    "        options={\"temperature\": 0}\n",
-    "    )\n",
-    "    \n",
-    "    llm_output = parse_llm_output(response[\"response\"])\n",
-    "    logger.info(f\"LLM Output: {llm_output}\")\n",
-    "    \n",
-    "    refined_results = []\n",
-    "    for paper_analysis in llm_output:\n",
-    "        paper_id = paper_analysis['id']\n",
-    "        matching_paper = top_papers_df[top_papers_df['id'] == paper_id].iloc[0]\n",
-    "        \n",
-    "        refined_results.append({\n",
-    "            \"id\": paper_id,\n",
-    "            \"url\": matching_paper[\"url\"],\n",
-    "            \"title\": matching_paper[\"title\"],\n",
-    "            \"authors\": matching_paper[\"cleaned_authors\"],\n",
-    "            \"abstract\": matching_paper[\"abstract\"],\n",
-    "            \"reasoning\": paper_analysis[\"reasoning\"]\n",
-    "        })\n",
-    "\n",
-    "    return pd.DataFrame(refined_results)"
+    "refined_df = fine_rank_with_llm(top_df)"
    ]
   },
   {
@@ -206,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "refined_df = fine_rank_with_llm(top_df)"
+    "refined_df"
    ]
   },
   {
@@ -215,19 +112,7 @@
    "id": "9",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "refined_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "10",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    ")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
