--- a/src/notebooks/example.ipynb
+++ b/src/notebooks/example.ipynb
@@ -31,8 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = fetch_recent_papers(max_results=100)\n",
-    "df['combined_text'] = \"Title: \" + df['title'] + \" Abstract: \" + df['abstract']"
+    "df = fetch_recent_papers(max_results=100)"
    ]
   },
   {
