--- a/src/notebooks/example.ipynb
+++ b/src/notebooks/example.ipynb
@@ -10,6 +10,9 @@
     "import pandas as pd\n",
     "import logging\n",
     "\n",
+    "from arxivrec.fetcher import fetch_recent_papers\n",
+    "from arxivrec.llm import fine_rank_with_llm\n",
+    "\n",
     "logging.basicConfig(level=logging.INFO)\n",
     "logger = logging.getLogger(__name__)"
    ]
@@ -21,23 +24,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from arxivrec.fetcher import fetch_recent_papers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "df = fetch_recent_papers(max_results=100)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3",
+   "id": "2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,14 +42,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
     "my_interest_embedding = encoder.encode([\"I am interested in Retrieval-augmented generation (RAG).\"])\n",
     "content_embedding = encoder.encode(df['combined_text'].tolist())\n",
+    "\n",
     "print(my_interest_embedding.shape)\n",
     "print(content_embedding.shape)\n",
     "print(encoder.cosine_sim(my_interest_embedding, content_embedding))\n",
@@ -68,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,40 +70,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from arxivrec.llm import fine_rank_with_llm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "refined_df = fine_rank_with_llm(top_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "refined_df = fine_rank_with_llm(top_df)\n",
     "refined_df"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
