--- a/src/notebooks/example.ipynb
+++ b/src/notebooks/example.ipynb
@@ -11,7 +11,7 @@
     "import logging\n",
     "\n",
     "from arxivrec.fetcher import fetch_recent_papers\n",
-    "from arxivrec.llm import fine_rank_with_llm\n",
+    "from arxivrec.llm import rank_with_llm\n",
     "\n",
     "logging.basicConfig(level=logging.INFO)\n",
     "logger = logging.getLogger(__name__)"
@@ -74,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "refined_df = fine_rank_with_llm(top_df)\n",
+    "refined_df = rank_with_llm(top_df)\n",
     "refined_df"
    ]
   }
