refactor; list topic

--- a/src/notebooks/example.ipynb
+++ b/src/notebooks/example.ipynb
@@ -10,8 +10,8 @@
     "import pandas as pd\n",
     "import logging\n",
     "\n",
-    "from arxivrec.fetcher import fetch_recent_papers\n",
-    "from arxivrec.llm import rank_with_llm\n",
+    "from arxivrec.dataset.fetcher import fetch_recent_papers\n",
+    "from arxivrec.engine.llm import rank_with_llm\n",
     "\n",
     "logging.basicConfig(level=logging.INFO)\n",
     "logger = logging.getLogger(__name__)"
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from arxivrec.encoder import TextEncoder\n",
+    "from arxivrec.engine.encoder import TextEncoder\n",
     "\n",
     "encoder = TextEncoder(model_name='sentence-transformers/all-MiniLM-L6-v2')"
    ]
